AC_PREREQ(2.57)
AC_INIT(server/server.cs)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(xsp, 1.0.5.99)
AM_MAINTAINER_MODE

AC_PROG_INSTALL

AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, mcs, no)
AC_PATH_PROG(GMCS, gmcs, no)
CS="C#"
if test "x$CSC" = "xno" -a "x$MCS" = "xno"  ; then
	dnl AC_MSG_ERROR([You need to install a C# compiler])
	AC_MSG_ERROR([No $CS compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi

case "$host" in
	*-*-mingw*|*-*-cygwin*)
	platform_win32=yes	
	;;
esac

AM_CONDITIONAL(PLATFORM_WIN32, test x$platform_win32 = xyes)
AM_CONDITIONAL(NET_2_0, test ! x$GMCS = xno)

echo "$CS compiler: $MCS"
test x$GMCS = xno || echo "$CS 2.0 compiler: $GMCS"

AC_SUBST(MCS)
AC_SUBST(GMCS)
AC_OUTPUT([
	Makefile
	doc/xsp.1
	doc/dbsessmgr.1
        doc/asp-state.1
	doc/Makefile
	scripts/Makefile
	server/AssemblyInfo.cs
	server/AssemblyInfoModMono.cs
	server/Makefile
	test/Makefile
	test/authtest/Makefile
        tools/Makefile
        tools/asp_state/Makefile
        tools/asp_state/AssemblyInfo.cs
        tools/dbsessmgr/Makefile
        tools/dbsessmgr/AssemblyInfo.cs
])

