AC_PREREQ(2.57)
AC_INIT(server/server.cs)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(xsp, 1.0.6.1)
AM_MAINTAINER_MODE

AC_PROG_INSTALL

AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, mcs, no)
AC_PATH_PROG(GMCS, gmcs, no)
CS="C#"
if test "x$CSC" = "xno" -a "x$MCS" = "xno"  ; then
	dnl AC_MSG_ERROR([You need to install a C# compiler])
	AC_MSG_ERROR([No $CS compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi

case "$host" in
	*-*-mingw*|*-*-cygwin*)
	platform_win32=yes	
	;;
esac

AM_CONDITIONAL(PLATFORM_WIN32, test x$platform_win32 = xyes)
AM_CONDITIONAL(NET_2_0, test ! x$GMCS = xno)
AM_CONDITIONAL(XSP_ONLY, test ! x$CSC = xno)

AC_PATH_PROG(GACUTIL, gacutil, no)
if test "x$GACUTIL" = "xno" ; then
	AC_MSG_ERROR([gacutil not found])
fi

echo "$CS compiler: $MCS"
test x$GMCS = xno || echo "$CS 2.0 compiler: $GMCS"

AC_SUBST(MCS)
AC_SUBST(GMCS)
AC_OUTPUT([
	Makefile
	man/xsp.1
	man/dbsessmgr.1
        man/asp-state.1
	man/Makefile
	scripts/Makefile
	server/AssemblyInfo.cs
	server/AssemblyInfoModMono.cs
	server/Makefile
	test/Makefile
	test/1.1/Makefile
	test/1.1/authtest/Makefile
	test/1.1/asp.net/Makefile
	test/1.1/webcontrols/Makefile
	test/1.1/html/Makefile
	test/1.1/webservice/Makefile
	test/1.1/databind/Makefile
	test/1.1/handlers/Makefile
	test/1.1/customcontrol/Makefile
	test/2.0/Makefile
	test/2.0/menu/Makefile
	test/2.0/treeview/Makefile
	test/2.0/masterpages/Makefile
	tools/Makefile
	tools/asp_state/Makefile
	tools/asp_state/AssemblyInfo.cs
	tools/dbsessmgr/Makefile
	tools/dbsessmgr/AssemblyInfo.cs
])

