man_MANS = xsp.1 mod-mono-server.1 fastcgi-mono-server.1 dbsessmgr.1 asp-state.1
EXTRA_DIST = xsp.1.in dbsessmgr.1.in asp-state.1.in mono-asp-apps.1.in
CLEANFILES = mod-mono-server.1 fastcgi-mono-server.1 asp-state.1 1 mono-asp-apps.1

mod-mono-server.1: xsp.1
	cp xsp.1 $@

fastcgi-mono-server.1: xsp.1
	cp xsp.1 $@
