if NET_2_0
SUBDIRS = 1.1 2.0
else
SUBDIRS = 1.1
endif

testfiles = \
		mod-mono-server.exe.config \
		index.aspx \
		index2.aspx \
		xsp.exe.config \
		web.config \
		global.asax \
		mono.png \
		monobutton.png \
		mono-powered-big.png \
		small-icon.png \
		sample.webapp \
		favicon.ico \
		mono-xsp.css

samplesdir = $(datadir)/doc/xsp/test
samples_DATA = $(testfiles)
