SUBDIRS = controls 1.1 2.0 App_Code

testfiles = \
		mod-mono-server.exe.config \
		index.aspx \
		xsp.exe.config \
		web.config \
		global.asax \
		mono.png \
		monobutton.png \
		mono-powered-big.png \
		small-icon.png \
		sample.webapp \
		favicon.ico \
		mono-xsp.css \
		Web.sitemap \
		missing_components.aspx

samplesdir = $(pkglibdir)/test
samples_DATA = $(testfiles)

EXTRA_DIST = $(testfiles) $(sitemapreader_build)
